--- a/style.css
+++ b/style.css
@@ -30,6 +30,28 @@ a {
   text-decoration: none;
 }
 
+a:before {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  top:1;
+  margin-top:1em;
+  left: 2em;
+  background-color: #000;
+  visibility: hidden;
+  transition: all .75s ease-in-out 0s;
+}
+
+a:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
+a:hover:before {
+  visibility: visible;
+  width: 100%;
+}
+
 .left-column {
   float: left;
   position: fixed;
