--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav li {
 a {
   color: rgba(0, 0, 0, 0.5);
   text-decoration: none;
+  position:relative;
 }
 
 a:before {
@@ -35,9 +36,8 @@ a:before {
   position: absolute;
   width: 0%;
   height: 2px;
-  top:1;
-  margin-top:1em;
-  left: 2em;
+  bottom:0;
+  left: 0;
   background-color: #000;
   visibility: hidden;
   transition: all .75s ease-in-out 0s;
