--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ html, body {
 }
 
 h1 {
-  font-weight: lighter;
   font-size: 3em;
-  margin-top: 1em;
+  font-weight: lighter;
   margin-left: 1em;
+  margin-top: 1em;
 }
 
 nav {
@@ -55,6 +55,7 @@ a:hover:before {
 .left-column {
   float: left;
   position: fixed;
+  width:30%;
 }
 
 .right-column {
